GPII-271: PMT part finished with the abscence of More/Less

--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,10 +1,11 @@
-<div class="gpii-adjusters gpii-fully-expanded gpii-punctuationVerbosity">
-    <div class="gpii-announceLabel gpii-announce gpii-label"></div>
-        <label class="gpiic-punctuationVerbosity-label gpii-description"></label>
+<div class="gpii-adjusters">
+    <div class="gpiic-speakText-announce-label gpii-speakText-label"></div>
+    <div>
+        <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
         <div class="gpii-punctuationVerbosity-container">
-            <div class="gpiic-punctuationVerbosity-row">
-                <input type="radio" class="gpiic-punctuationVerbosity" id="radioButton-option"/>
-                <label class="gpiic-punctuationVerbosity-option-label" for="radioButton-option"></label>
+            <div class="gpiic-speakText-punctuationVerbosity-row">
+                <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
+                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
             </div>
         </div>
     </div>
