--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -1,6 +1,7 @@
 <div class="gpii-adjusters gpii-fully-expanded">
-    <div class="gpii-readBackLabel gpii-readBack gpii-label"></div>
-        <input type="checkbox" id="key-echo" class="gpiic-keyEcho"/>
-        <label for="key-echo" class="gpii-checkboxLabel" ><span class="gpiic-keyEcho-label gpii-checkboxSpan"></span></label><br>
+    <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
+    <div>
+        <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
+        <label for="key-echo" class="gpii-checkboxLabel" ><span class="gpiic-speakText-keyEcho-label gpii-checkboxSpan"></span></label><br>
     </div>
 </div>
