--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -28,19 +28,24 @@
     </div>
     <div class="gpiic-prefsEditor-magnifier">
     </div>
-    <div class="gpiic-prefsEditor-magnifierInvertColours">
+
+    <div class="gpiic-magnifier-hidden">
+        <div class="gpiic-prefsEditor-magnifierInvertColours">
+        </div>
+        <div class="gpiic-prefsEditor-magnifierPosition">
+        </div>
+        <div class="gpiic-prefsEditor-magnifierFollows">
+        </div>
+        <div class="gpiic-prefsEditor-showCrosshairs">
+        </div>
     </div>
+    
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
-    <div class="gpiic-prefsEditor-magnifierPosition">
-    </div>
-    <div class="gpiic-prefsEditor-magnifierFollows">
-    </div>
-    <div class="gpiic-prefsEditor-showCrosshairs">
-    </div>
-
-    <input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
+    <label for="preferenceSwitchMagnifierExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess"></label>
+    <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
+    
     <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
         <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
         </div>
@@ -48,5 +53,4 @@
         </div>
     </div>
 
-    <label for="preferenceSwitchIncreaseSizeExtra" class="gpii-prefsEditor-moreLess gpiic-moreLess gpii-prefsEditor-category gpiic-category">&nbsp;</label>
 </div>
