--- a/src/shared/adjusters/html/increaseSizeTemplate.html
+++ b/src/shared/adjusters/html/increaseSizeTemplate.html
@@ -43,7 +43,7 @@
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     </div>
 
-    <label for="preferenceSwitchMagnifierExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess"></label>
+    <label for="preferenceSwitchMagnifierExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"></label>
     <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
     
     <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
