GPII-364, GPII-365: Overall styling and outlook. Resembles now the mockups. Will need some more work upon merging with Alex.

--- a/src/shared/adjusters/html/magnifierTemplate.html
+++ b/src/shared/adjusters/html/magnifierTemplate.html
@@ -1,4 +1,5 @@
 <div>
+    <h4 class="gpiic-magnifier-magnificationLevel"></h4>
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
