--- a/src/shared/adjusters/html/onOffSwitchTemplate.html
+++ b/src/shared/adjusters/html/onOffSwitchTemplate.html
@@ -1,5 +1,7 @@
 <div class="gpii-onOffSwitch-container">
-    <h3><label for="onOffSwitchInput" class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label></h3>
+    <h2 class="gpii-prefsEditor-firstHeading ">
+        <label for="onOffSwitchInput" class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label>
+    </h2>
     <div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="onOffSwitchInput" class="gpiic-onOffSwitch-input"/>
         <label for="onOffSwitchInput">
