--- a/src/shared/adjusters/html/textSizeTemplate.html
+++ b/src/shared/adjusters/html/textSizeTemplate.html
@@ -1,4 +1,4 @@
-<div>
+<div class="gpii-prefsEditor-adjusterPanel">
     <h4 class="gpiic-textSize-label"></h4>
 
     <div class="gpii-prefsEditor-previewPerSettingContainer">
