GPII-364, GPII-365: Created "Add contrast" adjusters for PCP. Only contrastTheme is different. PMT version extends PCP's with preview. Small styling fix.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -35,7 +35,8 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/iconCheck.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
-    <script type="text/javascript" src="../../src/shared/adjusters/js/contrastTheme.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/contrastThemePCP.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/contrastThemePMT.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/contrastEnabled.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/textSize.js"></script>
@@ -59,7 +60,8 @@
 
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
-    <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
+    <!-- <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script> -->
+    <script type="text/javascript" src="../../src/shared/schemas/js/adjusters_364_365_forPCPSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
     <!-- The demo script -->
