--- a/src/shared/preview/html/cursorPreview.html
+++ b/src/shared/preview/html/cursorPreview.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-by-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/framework/preferences/css/PrefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../adjusters/css/fss-theme-inverted-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../adjusters/css/adjusters.css" />
 </head>
 <body class="gpii-prefsEditor-previewPerSettingBody">
