GPII-365: Working on the expandingAdjusters grade. Currently, only thing not done is the ability to reference the model value that more/less visibility is dependent on.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -32,6 +32,7 @@
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
     <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/expandingAdjusters.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/iconCheck.js"></script>
