GPII-271: Working versions of PCP & PMT. TODO: code refactoring.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -34,11 +34,11 @@
 
         <title>New adjusters Demo</title>
 
-        <script type="text/javascript">
-            $(document).ready(function () {
-                demo.initGPII(".flc-prefsEditor");
-            });
-        </script>
+        <!--// <script type="text/javascript">
+        //     $(document).ready(function () {
+        //         demo.initGPII(".flc-prefsEditor");
+        //     });
+        // </script>-->
     </head>
     <body>
         <h1>PMT demo of the new adjusters</h1>
