GPII-364, GPII-365: Removed unused artifacts. HTML elements, JS component members, inline styling, commented out code.

--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,14 +1,6 @@
-<input type="checkbox" id="constrastAdjustersEnabled" class="gpiic-contrast-constrastAdjustersEnabled"/>
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
-    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="constrastAdjustersEnabled"></label>
-    <div style="display:none !important" class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
 </div>
-
-<input type="checkbox" id="addToMyPreferencesContrast"/>
-<div style="display:none !important" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
-</div>
-<label style="display:none !important" class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
-
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     <div class="gpiic-contrastEnabled"></div>
     <div class="gpiic-contrastTheme"></div>
