--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -12,5 +12,5 @@
         <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>
     </div>
-    <div class="fl-slider-input gpii-prefsEditor-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
+    <div class="fl-slider-input gpii-prefsEditor-slider-input"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
 </div>
