--- a/src/shared/adjusters/html/increaseSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePCP.html
@@ -1,14 +1,6 @@
-<input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
-    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
-    <div style="display:none !important" class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
 </div>
-
-<input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
-<div style="display:none !important" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
-</div>
-<label style="display:none !important" class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
-
 <div class="gpii-increaseSizePreferenceGroup">
 
     <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
