--- a/src/shared/adjusters/html/contrastEnabledTemplate.html
+++ b/src/shared/adjusters/html/contrastEnabledTemplate.html
@@ -1,2 +1,2 @@
-<input type="checkbox" style="display:block !important; clip:inherit !important" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
+<input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
 <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
