GPII-364, GPII-365: "common" folder with "merging.js" file. Contains logic on merging policy.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -29,6 +29,9 @@
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
+    <!-- The common JS files -->
+    <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
+
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
     <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
