GPII-271: Code refactoring. Both PCP & PMT now share common prefsEditor, difference too insignificant. CompositePanel files for volume & language moved to the shared directory, since they're identical.

--- a/src/shared/adjusters/html/moreLessTemplate.html
+++ b/src/shared/adjusters/html/moreLessTemplate.html
@@ -1,5 +1,7 @@
 <div class="gpii-adjusters gpii-fully-expanded gpii-moreLess">
     <input type="checkbox" id="more-less" class="gpiic-moreLess"/>
-    <label for="more-less"><span class="gpiic-moreLess-label"></span></label>
-    <span class="gpii-moreOptionsIcon-more moreOptionsIcon"></span>
+    <label for="more-less" class="gpii-moreLess-label">
+    	<span class="gpiic-moreLess-label"></span>
+    	<span class="gpii-moreOptionsIcon-more moreOptionsIcon"></span>
+    </label>
 </div>
