GPII-271: Common PCP & PMT templates moved to shared/

--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -3,9 +3,11 @@
         <div class="gpii-wordsSpokenPerMinute-element">
             <div class="gpiic-wordsSpokenPerMinute">
                 <label class="gpiic-wordsSpokenPerMinute-label gpii-label"></label><br>
-                <label class="gpii-textfieldStepper-decrement gpiic-wordsSpokenPerMinute-minus stepperMinus"></label>
-                <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-                <label class="gpii-textfieldStepper-increment gpiic-wordsSpokenPerMinute-plus stepperPlus"></label>
+                <div class="gpii-wordsSpokenPerMinute-stepper">
+                    <label class="gpii-textfieldStepper-decrement gpiic-wordsSpokenPerMinute-minus stepperMinus"></label>
+                    <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
+                    <label class="gpii-textfieldStepper-increment gpiic-wordsSpokenPerMinute-plus stepperPlus"></label>
+                </div>
             </div>
         </div><br>
     </div>
