--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -2,11 +2,11 @@
     <div class="gpii-partially-expanded">
         <div class="gpii-wordsSpokenPerMinute-element">
             <div class="gpiic-wordsSpokenPerMinute">
-                <label class="gpiic-wordsSpokenPerMinute-label gpii-label"></label><br>
-                <div class="gpii-wordsSpokenPerMinute-stepper">
-                    <label class="gpii-textfieldStepper-decrement gpiic-wordsSpokenPerMinute-minus stepperMinus"></label>
-                    <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-                    <label class="gpii-textfieldStepper-increment gpiic-wordsSpokenPerMinute-plus stepperPlus"></label>
+                <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
+                <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-speakText-wordsSpokenPerMinute-stepper">
+                    <label class="gpiic-textfieldStepper-decrement stepperMinus" id="wordsSpokenPerMinuteMinus"></label>
+                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                    <label class="gpiic-textfieldStepper-increment stepperPlus" id="wordsSpokenPerMinutePlus"></label>
                 </div>
             </div>
         </div><br>
