--- a/src/shared/adjusters/html/volumeTemplate.html
+++ b/src/shared/adjusters/html/volumeTemplate.html
@@ -1,8 +1,14 @@
-<div class="gpii-adjusters gpii-partially-expanded gpii-volume-element">
-    <div class="gpiic-volume">
-        <label class="gpiic-volume-label gpii-label"></label><br>
-        <label class="gpii-textfieldStepper-decrement gpiic-volume-minus stepperMinus"> </label>
-        <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-        <label class="gpii-textfieldStepper-increment gpiic-volume-plus stepperPlus"></label>
+<div class="gpii-adjusters">
+    <div class="gpii-partially-expanded">
+        <div class="gpii-volume-element">
+            <div class="gpiic-volume">
+                <label class="gpiic-speakText-volume-label gpii-speakText-label"></label><br>
+                <div class="gpiic-speakText-volume-stepper gpii-speakText-volume-stepper">
+                    <label class="gpiic-textfieldStepper-decrement stepperMinus" id="volumeMinus"></label>
+                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                    <label class="gpiic-textfieldStepper-increment stepperPlus" id="volumePlus"></label>
+                </div>
+            </div>
+        </div><br>
     </div>
 </div>
