--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -20,6 +20,9 @@
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
         <script type="text/javascript" src="../../src/pmt/pmtSchemas.js"></script>
+        <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
+
         <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
