--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,8 +1,14 @@
-<div class="gpii-adjusters gpii-fully-expanded gpii-voicePitch-element">
-    <div class="gpiic-voicePitch">
-        <label class="gpiic-voicePitch-label gpii-label"></label><br>
-        <label class="gpii-textfieldStepper-decrement gpiic-voicePitch-minus stepperMinus"> </label>
-        <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
-        <label class="gpii-textfieldStepper-increment gpiic-voicePitch-plus stepperPlus"></label>
+<div class="gpii-adjusters">
+    <div class="gpii-partially-expanded">
+        <div class="gpii-voicePitch-element">
+            <div class="gpiic-voicePitch">
+                <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
+                <div class="gpiic-speakText-voicePitch-stepper gpii-speakText-voicePitch-stepper">
+                    <label class="gpiic-textfieldStepper-decrement stepperMinus" id="voicePitchMinus"></label>
+                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                    <label class="gpiic-textfieldStepper-increment stepperPlus" id="voicePitchPlus"></label>
+                </div>
+            </div>
+        </div><br>
     </div>
 </div>
