GPII-271: The moreLess part of visualAlternatives renamed to visualAlternativesMoreLess, so that no confusion occurs after merging other moreLess togglers from other groups.

--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -15,7 +15,7 @@
             <div class="tutorials"></div>
             <div class="keyEcho"></div>
             <div class="wordEcho"></div>
-            <div class="moreLess"></div>
+            <div class="visualAlternativesMoreLess"></div>
             <div class="braille"></div><br>
         </div>
     </div>
