GPII-271: Removed two unnecessary classes for partially and fully expanded views.

--- a/src/shared/adjusters/html/announceCapitalsTemplate.html
+++ b/src/shared/adjusters/html/announceCapitalsTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-fully-expanded">
+<div class="gpii-adjusters">
     <input type="checkbox" id="announce-capitals" class="gpiic-announceCapitals"/>
     <label for="announce-capitals" class="gpii-checkboxLabel" ><span class="gpiic-announceCapitals-label gpii-checkboxSpan"></span></label>
 </div>
