--- a/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
+++ b/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-fully-expanded">
+<div class="gpii-adjusters">
     <input type="checkbox" id="speak-tutorial" class="gpiic-speakTutorialMessages"/>
     <label for="speak-tutorial" class="gpii-checkboxLabel" ><span class="gpiic-speakTutorialMessages-label gpii-checkboxSpan"></span></label>
 </div>
