--- a/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-fully-expanded gpii-visualAlternativesMoreLess">
+<div class="gpii-adjusters gpii-visualAlternativesMoreLess">
     <input type="checkbox" id="more-less" class="gpiic-visualAlternativesMoreLess"/>
     <label for="more-less" class="gpii-visualAlternativesMoreLess-label">
     	<span class="gpiic-visualAlternativesMoreLess-label"></span>
