--- a/src/shared/adjusters/html/wordEchoTemplate.html
+++ b/src/shared/adjusters/html/wordEchoTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-fully-expanded">
+<div class="gpii-adjusters">
     <input type="checkbox" id="word-echo" class="gpiic-wordEcho"/>
     <label for="word-echo" class="gpii-checkboxLabel" ><span class="gpiic-wordEcho-label gpii-checkboxSpan"></span></label>
 </div>
