GPII-271: Avoided unnecessary css rules.

--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -5,7 +5,7 @@
             <div class="gpiic-universalVolume-description gpii-description"></div>
             <div class="gpiic-speakText-universalVolume-stepper gpii-speakText-universalVolume-stepper">
                 <label class="gpiic-textfieldStepper-decrement stepperMinus" id="universalVolumeMinus"></label>
-                <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
                 <label class="gpiic-textfieldStepper-increment stepperPlus" id="universalVolumePlus"></label>
             </div>
         </div>
