--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -4,7 +4,7 @@
                 <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
                 <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-speakText-wordsSpokenPerMinute-stepper">
                     <label class="gpiic-textfieldStepper-decrement stepperMinus" id="wordsSpokenPerMinuteMinus"></label>
-                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
                     <label class="gpiic-textfieldStepper-increment stepperPlus" id="wordsSpokenPerMinutePlus"></label>
                 </div>
             </div>
