--- a/src/shared/adjusters/html/volumeTemplate.html
+++ b/src/shared/adjusters/html/volumeTemplate.html
@@ -4,7 +4,7 @@
             <label class="gpiic-speakText-volume-label gpii-speakText-label"></label><br>
             <div class="gpiic-speakText-volume-stepper gpii-speakText-volume-stepper">
                 <label class="gpiic-textfieldStepper-decrement stepperMinus" id="volumeMinus"></label>
-                <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField stepper fl-inputs" />
+                <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
                 <label class="gpiic-textfieldStepper-increment stepperPlus" id="volumePlus"></label>
             </div>
         </div>
