GPII-365: Better styling for "Cursor size" adjuster.

--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="gpiic-increaseSize-cursor-size-slider">
-    <div>
+    <div class="gpii-increaseSize-cursor-size-slider-container">
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
         <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>
