GPII-364, GPII-365: Adjuster groups are sized with flex. Corrected contrast theme indicator after that.

--- a/src/pmt/html/PMT.html
+++ b/src/pmt/html/PMT.html
@@ -1,5 +1,5 @@
 <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
-    <div class="fl-force-left gpii-prefsEditor-preferenceGroup">
+    <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
 
         <div class="contrastPreferenceGroup">
             <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel"></div>
@@ -7,13 +7,13 @@
 
     </div>
 
-    <div class="fl-force-left gpii-prefsEditor-preferenceGroup">
+    <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
 
     	<div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel">
     	</div>
     </div>
 
-    <div class="fl-force-right">
+    <div class="fl-container-flex20 fl-force-right">
         <div class="fl-prefsEditor-buttons">
             <input class="flc-prefsEditor-save fl-prefsEditor-save" type="button" value="" />
             <input class="flc-prefsEditor-reset" type="button" value="" />
