GPII-364, GPII-365: Updated adjuster version for PCP with recent styling changes.

--- a/src/shared/adjusters/html/cursorSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePCP.html
@@ -1,7 +1,7 @@
 <h4 class="gpiic-increaseSize-cursor-size-label"></h4>
 
 <div class="gpiic-increaseSize-cursor-size-slider">
-    <div>
+    <div class="gpii-increaseSize-cursor-size-slider-container">
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
         <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
         <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>
