--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
+<form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <label for="pmtResetButton" class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
