GPII-271: CSS styles refactored - deprecated rules removed, more clear class naming pattern used.

--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -2,6 +2,6 @@
     <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
     <div>
         <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
-        <label for="key-echo" class="gpii-checkboxLabel" ><span class="gpiic-speakText-keyEcho-label gpii-checkboxSpan"></span></label><br>
+        <label for="key-echo" class="gpii-checkbox-label" ><span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span></label><br>
     </div>
 </div>
