--- a/src/shared/adjusters/html/speakTextTemplate.html
+++ b/src/shared/adjusters/html/speakTextTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters gpii-speakText-element">
+<div class="gpii-adjusters">
     <h3><label for="speakText" class="gpiic-speakText-label gpii-switch"></label></h3>
     <div id="gpii-screenReaderOnOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="speakText" class="gpiic-speakText"/>
