--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -1,12 +1,10 @@
 <div class="gpii-adjusters">
-        <div class="gpii-wordsSpokenPerMinute-element">
-            <div class="gpiic-wordsSpokenPerMinute">
-                <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
-                <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-speakText-wordsSpokenPerMinute-stepper">
-                    <label class="gpiic-textfieldStepper-decrement stepperMinus" id="wordsSpokenPerMinuteMinus"></label>
-                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
-                    <label class="gpiic-textfieldStepper-increment stepperPlus" id="wordsSpokenPerMinutePlus"></label>
-                </div>
-            </div>
-        </div><br>
+    <div class="gpiic-wordsSpokenPerMinute">
+        <label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label><br>
+        <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-speakText-wordsSpokenPerMinute-stepper">
+            <label class="gpiic-textfieldStepper-decrement gpii-stepperMinus" id="wordsSpokenPerMinuteMinus"></label>
+            <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
+            <label class="gpiic-textfieldStepper-increment gpii-stepperPlus" id="wordsSpokenPerMinutePlus"></label>
+        </div>
+    </div><br>
 </div>
