--- a/src/pcp/pcp-VisualAlternativesGroupContainer.html
+++ b/src/pcp/pcp-VisualAlternativesGroupContainer.html
@@ -1,8 +1,8 @@
 <form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
-            <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label preset-button-label"></label>
-            <label for="visualAlternativesPresetButton" class="visualAlternatives-main-icon main-icon"></label><br>
+            <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label>
+            <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
             <div class="gpii-spacingEnsurer"></div>
 
             <div class="speakText"></div>
