--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,8 +1,8 @@
 <form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
-            <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
-            <label for="languagePresetButton" class="language-main-icon main-icon"></label><br>
+            <label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label>
+            <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label><br>
             <div class="gpii-spacingEnsurer"></div><br>
 
             <div class="universalLanguage"></div>
