--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,12 +1,10 @@
 <div class="gpii-adjusters">
-    <div class="gpii-voicePitch-element">
-        <div class="gpiic-voicePitch">
-            <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
-            <div class="gpiic-speakText-voicePitch-stepper gpii-speakText-voicePitch-stepper">
-                <label class="gpiic-textfieldStepper-decrement stepperMinus" id="voicePitchMinus"></label>
-                <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
-                <label class="gpiic-textfieldStepper-increment stepperPlus" id="voicePitchPlus"></label>
-            </div>
+    <div class="gpiic-voicePitch">
+        <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
+        <div class="gpiic-speakText-voicePitch-stepper gpii-speakText-voicePitch-stepper">
+            <label class="gpiic-textfieldStepper-decrement gpii-stepperMinus" id="voicePitchMinus"></label>
+            <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
+            <label class="gpiic-textfieldStepper-increment gpii-stepperPlus" id="voicePitchPlus"></label>
         </div>
     </div><br>
 </div>
