--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -31,7 +31,6 @@
             </div>
         </div>
         
-        <label for="preferenceSwitchMagnifierExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"></label>
-        <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
+        <label class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"></label>
     </div>
 </div>
