GPII-364, GPII-365: Integrating single-file font-icons.

--- a/src/shared/adjusters/html/iconCheckTemplate.html
+++ b/src/shared/adjusters/html/iconCheckTemplate.html
@@ -2,11 +2,11 @@
     <h4 class="gpiic-iconCheckAdjusterTitle"></h4>
     <input type="checkbox" id="preferenceSwitchIconCheckAdjuster"/>
     <label for="preferenceSwitchIconCheckAdjuster" class="gpii-iconCheckAdjusterArea">
-    	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
+    	<div class="gpiic-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
     	<div class="gpii-iconCheckAdjusterContainer">
     		<label for="preferenceSwitchIconCheckAdjuster" class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
     		<label for="preferenceSwitchIconCheckAdjuster" class="gpii-table-cell-valign-label">
-    			<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-iconCheckAdjusterCheckIcon"></div>
+    			<div class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></div>
     		</label>
     	</div>
     </label>
