--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
+<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
     <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
 </div>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
