--- a/src/shared/adjusters/html/contrastNewTemplate.html
+++ b/src/shared/adjusters/html/contrastNewTemplate.html
@@ -1,12 +1,12 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
-<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
+<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
     <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle"></label>
-    <div class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+    <div class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons"></div>
 </div>
 <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
-<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
+<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-addToMyPreferencesStar">
 </div>
 <label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
