--- a/src/shared/preview/html/cursorPreview.html
+++ b/src/shared/preview/html/cursorPreview.html
@@ -14,9 +14,9 @@
 <body class="gpii-prefsEditor-previewPerSettingBody">
     <div class="gpii-prefsEditor-previewPerSettingDiv">
       <div class="gpii-prefsEditor-previewPerSettingDivInner gpiic-increaseSize-previewPerSettingCursorDiv">
-            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor1"></div>
-            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor2"></div>
-            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor3"></div>
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingCursor1"></div>
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingCursor2"></div>
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingCursor3"></div>
       </div>
     </div>
 </body>
