GPII-265: First working version with GPII store. Using local server. Had to patch file /home/bob/git/node_modules/universal/node_modules/kettle/lib/server.js to allow cross-domain requests with this change,
    kettle.server.config.configureCreateRequest = function (server, requests) {
        server.configure(function () {
            server.use(requests.create);
		server.use(function (req, res, next) {
		 res.header("Access-Control-Allow-Origin", "*");
		 res.header("Access-Control-Allow-Methods", "OPTIONS,GET,POST,PUT,DELETE");
		 res.header("Access-Control-Allow-Headers", "X-Requested-With,Content-Type");
		 next();
		});
        });
    };

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -71,6 +71,9 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
+    <!-- The GPII store -->
+    <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
+
     <!-- The demo script -->
     <script type="text/javascript" src="demo.js"></script>
 
