--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
 
+        <script type="text/javascript" src="../../src/shared/adjusters/js/expandingAdjusters.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
