--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -8,15 +8,20 @@
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
-            <div class="voicePitch"></div>
-            <div class="screenReaderLanguage"></div>
-            <div class="punctuationVerbosity"></div>
-            <div class="capitals"></div>
-            <div class="tutorials"></div>
-            <div class="keyEcho"></div>
-            <div class="wordEcho"></div>
-            <div class="visualAlternativesMoreLess"></div>
+            <div class="gpiic-visualAlternatives-hidden">
+                <div class="voicePitch"></div>
+                <div class="screenReaderLanguage"></div>
+                <div class="punctuationVerbosity"></div>
+                <div class="capitals"></div>
+                <div class="tutorials"></div>
+                <div class="keyEcho"></div>
+                <div class="wordEcho"></div>
+            </div>
             <div class="braille"></div><br>
+
+            <label for="preferenceSwitchVisualAlternativesExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-visualAlternatives-moreLess gpiic-visualAlternatives-category"></label>
+            <input type="checkbox" id="preferenceSwitchVisualAlternativesExtra" class="gpiic-visualAlternatives-preferenceSwitchExtra"/>
+
         </div>
     </div>
 </form>
