GPII-267: Created a GPII Session component. Used for holding user token, login/logout and firing events. GPII store now uses that component. No log in/out functionality in Store. GPII Session is made globally public in Fluid's staticEnvironment as {gpiiSession}.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -76,7 +76,8 @@
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMTFrame.js"></script>
 
-    <!-- The GPII store -->
+    <!-- The GPII related files -->
+    <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
 
     <!-- The demo script -->
