GPII-271: First addition of Alex's adjusters in PMT container. Moved message files to "/en" folder. Translations needed. Style is broken. Nested expanding adjusters should be fixed from prefsEditors.js

--- a/src/pmt/html/PMT.html
+++ b/src/pmt/html/PMT.html
@@ -1,4 +1,13 @@
 <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
+    
+    <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
+        <div class="fl-prefsEditor-category">
+            <div class="gpiic-visualAlternatives"></div>
+            <div class="gpiic-volumeGroup"></div>
+            <div class="gpiic-languageGroup"></div>
+        </div>
+    </div>
+    
     <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
 
         <div class="contrastPreferenceGroup">
