--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-text-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-bw-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-wb-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
@@ -20,17 +21,27 @@
     <!-- Needed fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+    <!-- This is causing conflicts -->
+    <!-- <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" /> -->
 
     <!-- All styling for PMT is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
 
+    <!-- This is breaking the slider color -->
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
+
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The common JS files -->
     <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
+
+    <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
@@ -70,6 +81,12 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
     <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
+
+    <!-- PCP-specific files -->
+    <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
+    <script type="text/javascript" src="../../src/pcp/visualAlternativesCollectivePanel.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/volumeCollectivePanel.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
 
     <!-- The demo script -->
     <script type="text/javascript" src="demo.js"></script>
