--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -22,7 +22,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <!-- This is causing conflicts -->
-    <!-- <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
 
     <!-- All styling for PMT is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
