GPII-271: Successful merging of all adjuster groups.

--- a/src/shared/adjusters/html/wordEchoTemplate.html
+++ b/src/shared/adjusters/html/wordEchoTemplate.html
@@ -1,2 +1,4 @@
-            <input type="checkbox" id="word-echo" class="gpiic-speakText-wordEcho"/>
-            <label for="word-echo" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-wordEcho-label gpii-speakText-checkboxSpan"></span></label>
+<div class="gpii-adjusters">
+    <input type="checkbox" id="word-echo" class="gpiic-wordEcho"/>
+    <label for="word-echo" class="gpii-checkbox-label" ><span class="gpiic-wordEcho-label gpii-checkbox-label-text"></span></label>
+</div>
