--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -82,11 +82,11 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
-    <!-- PCP-specific files -->
+    <!-- PCPteam-specific files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/pcp/visualAlternativesCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/volumeCollectivePanel.js"></script>
-    <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
 
     <!-- The demo script -->
     <script type="text/javascript" src="demo.js"></script>
