--- a/src/pcp/pcp-VisualAlternativesGroupContainer.html
+++ b/src/pcp/pcp-VisualAlternativesGroupContainer.html
@@ -8,6 +8,13 @@
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
+                <div class="voicePitch"></div>
+                <div class="screenReaderLanguage"></div>
+                <div class="punctuationVerbosity"></div>
+                <div class="capitals"></div>
+                <div class="tutorials"></div>
+                <div class="keyEcho"></div>
+                <div class="wordEcho"></div>
             <div class="braille"></div><br>
         </div>
     </div>
