--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -1,5 +1,7 @@
-        <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
-        <div>
-            <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
-            <label for="key-echo" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-keyEcho-label gpii-speakText-checkboxSpan"></span></label><br>
-        </div>
+<div class="gpii-adjusters">
+    <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
+    <div>
+        <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
+        <label for="key-echo" class="gpii-checkbox-label" ><span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span></label><br>
+    </div>
+</div>
