GPII-271: Some css bugs fixed

--- a/src/pcp/pcp-VisualAlternativesGroupContainer.html
+++ b/src/pcp/pcp-VisualAlternativesGroupContainer.html
@@ -8,6 +8,7 @@
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
+            <div class="gpiic-visualAlternatives-hidden">
                 <div class="voicePitch"></div>
                 <div class="screenReaderLanguage"></div>
                 <div class="punctuationVerbosity"></div>
@@ -15,6 +16,7 @@
                 <div class="tutorials"></div>
                 <div class="keyEcho"></div>
                 <div class="wordEcho"></div>
+            </div>
             <div class="braille"></div><br>
         </div>
     </div>
