--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -1,3 +1,4 @@
+<div class="gpii-spacing-ensurer"></div>
 <h4 class="gpiic-increaseSize-cursor-size-label"></h4>
 
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
