--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -16,6 +16,7 @@
                 <div class="tutorials"></div>
                 <div class="keyEcho"></div>
                 <div class="wordEcho"></div>
+                <div class="screanReaderFollows"></div>
             </div>
 
             <label for="preferenceSwitchVisualAlternativesExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-visualAlternatives-moreLess gpiic-visualAlternatives-category"></label>
