NOJIRA: PMT does not depend on style-speakText.css Moved some needed styling to adjusters.css Will need to fix Alex's textfield stepper.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -26,7 +26,7 @@
 
     <!-- All styling for PMT is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" /> -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
 
     <!-- This is breaking the slider color -->
