--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -7,7 +7,7 @@
         <iframe class="gpiic-textSize-preview gpiic-adjuster-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="gpiic-textSize-stepper gpii-stepper">
+    <div class="gpiic-textSize-stepper gpii-stepper gpii-stepper-pmt">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
         <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
