GPII-271: Screen reader follows moved to left

--- a/src/shared/adjusters/html/followingElementTemplate.html
+++ b/src/shared/adjusters/html/followingElementTemplate.html
@@ -1,5 +1,5 @@
 <div class="gpii-followingElement-container">
-    <h4 class="gpiic-followingElementHeading"></h4>
+    <h4 class="gpiic-followingElementHeading gpii-label"></h4>
     <div class="gpii-followingElementRow gpiic-followingElementRow">
     	<input type="checkbox" class="gpiic-followingElementInput" id="followingElement" name="followingElement"/>
     	<label for="followingElement" class="gpii-iconCheckAdjusterArea gpiic-followingElementLabel">
