--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-text-prefsEditor.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-bw-prefsEditor.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-wb-prefsEditor.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
@@ -28,6 +29,12 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
 
+        <!-- This is breaking the slider color -->
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
+
         <!-- The Infusion Library -->
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
@@ -36,6 +43,8 @@
 
         <!-- The common JS files -->
         <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
+
+        <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
         <!-- The custom adjusters JS files -->
         <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
@@ -60,6 +69,7 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPosition.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/followingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollowsFollowingElement.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/screenReaderFollowsFollowingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
 
         <!-- The JS files of the enactors of my custom adjusters -->
@@ -80,6 +90,12 @@
         <!-- The GPII related files -->
         <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
         <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
+
+        <!-- PCPteam-specific files -->
+        <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
+        <script type="text/javascript" src="../../src/pmt/visualAlternativesCollectivePanel.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/volumeCollectivePanel.js"></script>
 
         <!-- The demo script -->
         <script type="text/javascript" src="demo.js"></script>
