GPII-226: Added the button in PMT demo to open up PCP demo.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -26,6 +26,7 @@
             </label>
             <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
             <input id="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-reset" type="button" value="" />
+            <input id="gotoPcpButton" class="flc-prefsEditor-gotoPcp gpii-prefsEditor-gotoPcp" type="button" value="Go to PCP" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
             <h2><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
