--- a/src/pmt/html/PMT.html
+++ b/src/pmt/html/PMT.html
@@ -7,7 +7,7 @@
     <div class="gpii-prefsEditor-preferencesContainer">
         <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
             <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
-                
+
                 <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
                     <div class="fl-prefsEditor-category">
                         <div class="gpiic-visualAlternatives"></div>
@@ -30,7 +30,7 @@
         <span class="gpii-prefsEditor-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </label>
-            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
+            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
             <h2><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
