--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -80,6 +80,8 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
     <script type="text/javascript" src="../../src/shared/schemas/js/pcpSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
 
     <!-- PCPteam-specific files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
