GPII-226: Hack to fix styling for PCP
Fixed the PCP's styling for the "Save & Apply" button by hacking in inline styles for absolute positioning. This needs to be changed before it can be merged into master and was only done at this point to keep the demo from looking broken.

--- a/src/pmt/html/PMT.html
+++ b/src/pmt/html/PMT.html
@@ -25,7 +25,13 @@
         </div>
     </div>
 
+    <!--
     <div class="gpii-pmt-bottomRow">
+    Commented out for purpose of review.
+    TODO: Remove the inline style hack below.
+    It is for correcting the position of the Save & Apply button in the PCP for the review.
+    -->
+    <div style="position:absolute;left:419px;top:719px;">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-prefsEditor-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
