GPII-226: Code refactored, including deleting common CSS properties, file organisation for PCP frame equalized to PMT's (same file location and naming followed), messages in PCP frame now loaded according to browser language.

--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -33,6 +33,7 @@
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/pcpFrames.css" />
 
     <!-- The Infusion Library -->
@@ -44,7 +45,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
     <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
-    <script type="text/javascript" src="../../src/shared/frames/js/Pilot2PMTDefaults.js"></script>
+    <script type="text/javascript" src="../../src/pilot2Frames/pcp/js/Pilot2PCPDefaults.js"></script>
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
@@ -76,15 +77,12 @@
     <!-- The i18n JS files -->
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
-    <!-- PMT-specific files -->
-    <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
-    <script type="text/javascript" src="../../src/shared/schemas/js/pcpSchema.js"></script>
-    <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
-
     <!-- Socket.io-client library -->
     <script type="text/javascript" src="../../src/shared/lib/socket.io/socket.io.js"></script>
 
-    <!-- PCPteam-specific files -->
+    <!-- PCP-specific files -->
+    <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
+    <script type="text/javascript" src="../../src/pilot2Frames/pcp/js/pcpSchema.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
@@ -99,7 +97,7 @@
 <body>
 
     <!-- This is the div that will contain the UI Options component -->
-    <div id="gpiic-pmt">
+    <div id="gpiic-pcp">
     </div>
 
 </body>
