GPII-226: Almost all of pcpFrames.css merged into frames.css

--- a/src/pilot2Frames/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pilot2Frames/pcp/html/PrefsEditorTemplate-PCP.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="gpii-prefsEditor-preferencesContainer">
-        <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
+        <div class="gpii-prefsEditor-preferences gpii-prefsEditor-PCP-preferences gpiic-prefsEditor-preferences">
             <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
 
                 <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
@@ -30,7 +30,7 @@
         <span class="gpii-prefsEditor-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </label>
-            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+            <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
     </div>
 </div>
